@@ -1913,8 +1913,16 @@ do_strftime(int nargs)
 				lintwarn(_("strftime: received non-numeric second argument"));
 			(void) force_number(t2);
 			clock_val = get_number_si(t2);
-			if (clock_val < 0)
-				fatal(_("strftime: second argument less than 0 or too big for time_t"));
+			/*
+			 * 4/2015: This used to be here:
+			 *
+			 * if (clock_val < 0)
+			 *	fatal(_("strftime: second argument less than 0 or too big for time_t"));
+			 *
+			 * It is now disabled since some systems have strftime that works
+			 * on times before the epoch.  No arbritrary limits comes into
+			 * play at this point.
+			 */
 			fclock = (time_t) clock_val;
 			DEREF(t2);
 		}
