@@ -1,3 +1,8 @@
+2015-04-13         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (negtime): New test.
+	* negtime.awk, negtime.ok: New files.
+
 2015-04-09         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* fts.awk: Skip atime to avoid spurious timestamp
